--- a/thaisdelima-portfolio/package.json
+++ b/thaisdelima-portfolio/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://thaisdelima.github.io/personal-website",
+  "homepage": "http://thaisdelima.github.io",
   "name": "thaisdelima-portfolio",
   "version": "0.1.0",
   "private": true,
