--- a/thaisdelima-website/package.json
+++ b/thaisdelima-website/package.json
@@ -8,11 +8,15 @@
   },
   "dependencies": {
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "react-router-dom": "^6.2.1",
+    "styled-components": "^5.3.3"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^1.0.7",
-    "sass": "^1.45.1",
     "vite": "^2.7.2"
+  },
+  "resolutions": {
+    "styled-components": "^5"
   }
 }
